# media-player-lite

./: README.md  alembic.ini  draft.py  pyproject.toml
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
app/routes/: playlists.py  songs.py  users.py
migrations/: env.py
migrations/versions/: 015c780a8c60_update_database_schema_to_include_song_.py  5a3b57dac736_create_users_table.py
