[tool.poetry]
name = "media-player-lite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
