[tool.poetry]
name = "media-player-lite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
passlib = "^1.7.4"
python-jose = "^3.3.0"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
